[tool.poetry]
name = "causal-ml-notebooks"
version = "0.1.0"
description = "Repository to reproduce causal ml approaches"
authors = ["Julia Hehl <julia.hehl@bmw.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gcastle = "^1.0.3"
numpy = "^1.26.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
